[package]
name = "rusty-sketch"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"
build = "config/build.rs"

[lib]
name = "charcoal"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.11.0"
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.image]
version = "0.21.1"
default-features = false
features = [
  "jpeg",
  "png_codec"
]

[dependencies.web-sys]
version = "0.3.20"
features = [
  "Blob",
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlPreElement",
  "Location",
  "Node",
  "NodeList",
  "UrlSearchParams",
  "Window",
  "XmlHttpRequest",
  "XmlHttpRequestEventTarget",
  "XmlHttpRequestResponseType",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
