[package]
name = "rusty-sketch"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2021"
build = "config/build.rs"

[lib]
name = "charcoal"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
base64 = "0.22"
js-sys = "0.3"
wasm-bindgen = "0.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.getrandom]
version = "0.2"
default-features = false
features = ["js"]

[dependencies.image]
version = "0.25"
default-features = false
features = [
  "jpeg",
  "png"
]

[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "Document",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlPreElement",
  "Location",
  "Node",
  "NodeList",
  "UrlSearchParams",
  "Window",
  "XmlHttpRequest",
  "XmlHttpRequestEventTarget",
  "XmlHttpRequestResponseType",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
